# snakemake-software-deployment-plugin-conda

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: announce-release.yml  ci.yml  release-please.yml
docs/: intro.md
src/snakemake_software_deployment_plugin_conda/: __init__.py  pinfiles.py
tests/: test_env_pinned.linux-64.pin.txt  test_env_pinned.yaml  test_env_pypi.yaml  test_plugin.py
